# grandpa-bridge-gadget

./: .editorconfig  .gitignore  .gitlab-ci.yml  CODEOWNERS  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: deny.yml  lint.yml  rust.yml
beefy-cli/: Cargo.toml
beefy-cli/src/: main.rs
beefy-cli/src/cli/: merkle_tree.rs  mmr.rs  mod.rs  uncompress_authorities.rs  utils.rs
beefy-gadget/: Cargo.toml
beefy-gadget/rpc/: Cargo.toml
beefy-gadget/rpc/src/: lib.rs  notification.rs
beefy-gadget/src/: error.rs  gossip.rs  keystore.rs  lib.rs  metrics.rs  notification.rs  round.rs  tests.rs  validator.rs  worker.rs
beefy-light-client/: Cargo.toml
beefy-light-client/src/: client.rs  error.rs  keyring.rs  lib.rs  merkle.rs  no_std.rs
beefy-light-client/tests/: light_client.rs
beefy-merkle-root/: Cargo.toml
beefy-merkle-root/src/: lib.rs
beefy-mmr-pallet/: Cargo.toml
beefy-mmr-pallet/src/: lib.rs  mock.rs  tests.rs
beefy-node/: docker-compose.yml
beefy-node/node/: Cargo.toml
beefy-node/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
beefy-node/runtime/: Cargo.toml
beefy-node/runtime/src/: lib.rs
beefy-pallet/: Cargo.toml
beefy-pallet/src/: lib.rs  mock.rs  tests.rs
beefy-primitives/: Cargo.toml
beefy-primitives/src/: commitment.rs  lib.rs  mmr.rs  witness.rs
beefy-primitives/tests/: basic_lc_operations.rs
beefy-test/: Cargo.toml
beefy-test/src/: client.rs  client_tests.rs  import.rs  keyring.rs  lib.rs  network.rs  peer.rs
docs/: beefy.md  walkthrough.md
light-client/: Cargo.toml
light-client/src/: client.rs  error.rs  keyring.rs  lib.rs  merkle.rs  std.rs
light-client/tests/: light_client.rs
node-example/node/: Cargo.toml
node-example/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
node-example/pallets/template/: Cargo.toml
node-example/pallets/template/src/: lib.rs  mock.rs
node-example/runtime/: Cargo.toml
node-example/runtime/src/: lib.rs
pallet/: Cargo.toml
pallet/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: commitment.rs  lib.rs  witness.rs
primitives/tests/: basic_lc_operations.rs  description.rsa  dummy_chain.rs  example.rs  polkadot.rs
primitives/tests/light_client/: merkle_tree.rs  mod.rs  validator_set.rs
scripts/ci/: pre_cache.sh
