[profile.release]
panic = "unwind"

[workspace]
resolver = "2"

members = [
	"beefy-cli",
	"beefy-gadget",
	"beefy-gadget/rpc",
	"beefy-node/node",
	"beefy-node/runtime",
	"beefy-pallet",
	"beefy-primitives",
	"beefy-test",
]

[patch.crates-io]
parity-util-mem = { git = "https://github.com/paritytech/parity-common" }
primitive-types = { git = "https://github.com/paritytech/parity-common" }
scale-info = { git = "https://github.com/paritytech/scale-info", branch = "aj-substrate" }