[package]
name = "beefy-cli"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
beefy-primitives = { version = "0.1", path = "../beefy-primitives" }
hex = "0.4"
structopt = "0.3.21"
parity-scale-codec = "2.0"
