[package]
name = "beefy-gadget"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
fnv = "1.0.6"
futures = "0.3"
hex = "0.4"
log = "0.4"
parking_lot = "0.11"
thiserror = "1.0"

codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }

sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }

beefy-primitives = { path = "../beefy-primitives" }

[dev-dependencies]
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "statemine_v2" }

beefy-test = { path = "../beefy-test" }
