[package]
name = "beefy-gadget"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
fnv = "1.0.6"
futures = "0.3"
hex = "0.4"
log = "0.4"
parking_lot = "0.11"
thiserror = "1.0"
wasm-timer = "0.2.5"

codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }

sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }

beefy-primitives = { path = "../beefy-primitives" }

[dev-dependencies]
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "grandpa_finality_logs" }

beefy-test = { path = "../beefy-test" }
