[package]
name = "beefy-light-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]

# Substrate dependencies
codec = { version = "2.3.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
displaydoc = { version = "0.2", default-features = false}

arber = { git = "https://github.com/adoerr/arber", default-features = false, branch = "main" }

beefy-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

strum = { version = "0.21", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "arber/std",
    "beefy-primitives/std",
    "codec/std",
    "displaydoc/std",
    "sp-core/std",
]
