[package]
name = "beefy-merkle-root"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "A no-std/Substrate compatible library to construct binary merkle tree."

[dependencies]
hex = { version = "0.4", optional = true, default-features = false }
log = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "0.3"
hex = "0.4"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
env_logger = "0.8"

[features]
default = ["std", "debug"]
debug = ["hex", "log"]
std = ["log/std"]
