[package]
name = "pallet-beefy"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "andre/staking-offences-era" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "andre/staking-offences-era" }

sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "andre/staking-offences-era" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "andre/staking-offences-era" }

pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "andre/staking-offences-era" }

beefy-primitives = { path = "../beefy-primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "andre/staking-offences-era" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "andre/staking-offences-era" }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "andre/staking-offences-era" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"beefy-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-session/std",
]
