[package]
name = "beefy-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"], optional = true }

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "andre/staking-offences-era" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "andre/staking-offences-era" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "andre/staking-offences-era" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "andre/staking-offences-era" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "andre/staking-offences-era" }

[dev-dependencies]
hex-literal = "0.3"

sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
