[package]
name = "beefy-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "0.10.0", default-features = false, features = ["derive"], optional = true }

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "apopiak/polkadot-v0.9.9-compilation-fix" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "apopiak/polkadot-v0.9.9-compilation-fix" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "apopiak/polkadot-v0.9.9-compilation-fix" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "apopiak/polkadot-v0.9.9-compilation-fix" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "apopiak/polkadot-v0.9.9-compilation-fix" }

[dev-dependencies]
hex-literal = "0.3"

sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "apopiak/polkadot-v0.9.9-compilation-fix" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
