[package]
name = "light-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]

# Substrate dependencies
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }

beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "master" }

strum = { version = "0.21", features = ["derive"] }
