[package]
name = "pallet-beefy"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { version = "1.3.5", package = "parity-scale-codec", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

beefy-primitives = { path = "../primitives", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "td-mmr", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "td-mmr", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "td-mmr", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "td-mmr", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "td-mmr", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"beefy-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-session/std",
]
