[package]
name = "beefy-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { version = "1.3.5", package = "parity-scale-codec", features = ["derive"] }

[dev-dependencies]
hex-literal = "0.3"
