[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }

[dependencies]
jsonrpc-core = "18.0.0"
structopt = "0.3.22"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../beefy-primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "andre/staking-offences-era" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "andre/staking-offences-era" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "andre/staking-offences-era" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "andre/staking-offences-era" }

[features]
default = []
runtime-benchmarks = []
