[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }

[dependencies]
jsonrpc-core = "18.0.0"
structopt = "0.3.22"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../beefy-primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }

sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "bkchr-update-wasmtime-0.29.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "bkchr-update-wasmtime-0.29.0" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "bkchr-update-wasmtime-0.29.0" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "bkchr-update-wasmtime-0.29.0" }

[features]
default = []
runtime-benchmarks = []
